# short_generation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: shorts.py  videos.py
app/schemas/: responses.py  shorts.py  transcription.py
app/services/: context_optimizer.py  gemini_client.py  shorts_identifier.py  transcription.py  transcription_precision.py  video_clipper.py
app/utils/: audio.py  file_manager.py  logging.py  time_utils.py
frontend/: app.js  index.html  styles.css
scripts/: download_whisper.py  test_whisperx.py
